--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "langchain": "^0.1.34",
+    "next": "^14.2.2",
     "openai": "^4.38.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
