--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "dotenv": "^16.4.5",
     "langchain": "^0.1.34",
     "next": "^14.2.2",
     "openai": "^4.38.2",
@@ -27,6 +28,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "tsx": "^4.7.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
